--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,11 @@
 *.tar.gz
 *.rar
 
+#Other files
+.classpath
+.project
+.settings
+build
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
